--- a/app-ui/src/app/search/search.component.html
+++ b/app-ui/src/app/search/search.component.html
@@ -15,7 +15,7 @@
         <div class="card-body">
           <h5 class="card-title">{{ movie.Title }}</h5>
           <p class="card-text"> Year : {{ movie.Year }} , Type: {{ movie.Type }} </p>
-          <a href="#" class="btn btn-primary">View</a>
+          <button type="button" class="btn btn-danger view-btn" (click)="movieDetails(''+ movie.imdbID)">View</button>
         </div>
       </div>
       <br/>
