--- a/app-ui/src/app/movie/movie.component.html
+++ b/app-ui/src/app/movie/movie.component.html
@@ -1,2 +1,16 @@
-<p>movie works!</p>
-<!-- Use imdb id to display data of the movie -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Movie</title>
+  <meta charset="utf-8">
+</head>
+<body>
+
+<div>
+  <h3>{{details.Title}}</h3>
+  <p>We love music!</p>
+  <p>We have created a fictional band website. Lorem ipsum..</p>
+</div>
+
+</body>
+</html>
