--- a/app-ui/src/app/home/home.component.html
+++ b/app-ui/src/app/home/home.component.html
@@ -1,6 +1,15 @@
-<div class="background">
+<div class ="header">
+  <h1>Search for a Movie , TV series , Cartoons...</h1>
+</div>
+
+<section class="background">
   <!-- Angular specific attributes need to be imported -->
   <input [(ngModel)]="movieTitle" class="search" />
   <button class="btn btn-success search-btn"
     (click)="onSearch()">Search</button>
+
+</section>
+<div class="fixed-footer">
+  <div class="container">Copyright &copy; 2020 ---------- primeprojects.club</div>        
 </div>
+
