--- a/app-ui/src/app/home/home.component.scss
+++ b/app-ui/src/app/home/home.component.scss
@@ -1,6 +1,7 @@
 .background {
-  background: rgb(2,0,36);
-  background: linear-gradient(120deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 6%, rgba(0,212,255,1) 100%);
+  //background: rgb(2,0,36);
+  //background: linear-gradient(120deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 6%, rgba(0,212,255,1) 100%);
+  background-image: url("https://townsquare.media/site/295/files/2019/12/2020-movies-collage.jpg?w=980&q=75");
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,9 +12,31 @@
 .search {
   height: 38px;
   width: 350px;
-  margin-top: -38px;
+  margin-top: -250px;
+}
+.header{
+  background: linear-gradient(120deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 6%, rgba(0,212,255,1) 100%);
+  font-size: 150px;
+  font-weight: 600;
+  font-size: 2.5rem;
+  font-style: italic;
+  color: hsl(240, 43%, 99%);
+  font-family: initial;
+  text-align: center;
+  text-shadow: 1px 1px 2px #e51313, 0 0 25px #f0f6f1, 0 0 5px white;
+  height: 100px;
+}
+.search-btn {
+  margin-top: -250px;
 }
 
-.search-btn {
-  margin-top: -38px;
+.fixed-footer{
+  width: 100%;
+  position: fixed;        
+  background: #333;
+  padding: 10px 0;
+  color: #fff;
+  bottom: 0px;
 }
+
+
