--- a/app-ui/src/app/movie/movie.component.scss
+++ b/app-ui/src/app/movie/movie.component.scss
@@ -1,6 +1,6 @@
 .header{
     
-    background-image: linear-gradient(lightgreen, yellow);
+    background-color: white;
     padding: 10px;
     border-radius: 20px;
     border-color: midnightblue;
