--- a/app-ui/src/app/movie/movie.component.html
+++ b/app-ui/src/app/movie/movie.component.html
@@ -37,7 +37,7 @@
                 <p class = "production">{{details.Production}}</p>
                 <div class="plot">
                     <h3 class ="plot-heading">Plot</h3>>
-                    <p class="para">{{details.Plot}}</p>
+                    <div class="para">{{details.Plot}}</div>
                 </div>
             </div>
             <div class="col-sm-3">
