--- a/app-ui/src/app/home/home.component.html
+++ b/app-ui/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class ="header">
-  <h1>Search for a Movie , TV series , Cartoons...</h1>
+  <h1 class ="zoom">Search for a Movie , TV series , Cartoons...</h1>
 </div>
 
 <section class="background">
