--- a/app-ui/src/app/home/home.component.scss
+++ b/app-ui/src/app/home/home.component.scss
@@ -1,9 +1,12 @@
 .background {
   //background: rgb(2,0,36);
   //background: linear-gradient(120deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 6%, rgba(0,212,255,1) 100%);
-  background-image: url("https://townsquare.media/site/295/files/2019/12/2020-movies-collage.jpg?w=980&q=75");
+  background-image: url("https://image.shutterstock.com/z/stock-photo-film-movie-background-clapperboard-and-film-reels-in-theater-644371840.jpg");
   display: flex;
+  background-color: rgb(174, 150, 206);
+  background-repeat: no-repeat;
   justify-content: center;
+  margin-left: 8px;
   align-items: center;
   width: 100%;
   height: 100vh;
@@ -15,16 +18,20 @@
   margin-top: -250px;
 }
 .header{
-  background: linear-gradient(120deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 6%, rgba(0,212,255,1) 100%);
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSBe59K3sp774__j564xh_HPp1a0R6oIcgMQA&usqp=CAU");
   font-size: 150px;
-  font-weight: 600;
-  font-size: 2.5rem;
-  font-style: italic;
-  color: hsl(240, 43%, 99%);
-  font-family: initial;
+  font-style: Bold;
+  border-style: outset;
+  border-color: black;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
-  text-shadow: 1px 1px 2px #e51313, 0 0 25px #f0f6f1, 0 0 5px white;
+  text-shadow: 2px 2px 5px white;
   height: 100px;
+}
+
+.zoom:hover {
+  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 .search-btn {
   margin-top: -250px;
